--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: tuna_mehmet_x
 github_username:  Mehmetuna
 
+google_analytics: G-V1JTQREYWF
+
 # Build settings
 theme: minima
 plugins:
